--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,6 +8,8 @@ body{
 .container{
     max-width: 1350px !important;
 }
+
+/* navbar */
 nav{
     background: #fff;
 }
@@ -26,12 +28,25 @@ nav .input-group select{
     font-size: 13px;
     font-weight: 600;
 }
+.nav-item{
+    transition: .3s ease-in-out;
+}
 nav .input-group{
     border-radius: 3px;
     border: solid 1px #03b102;
 }
 nav .input-group select.form-control:focus{
     box-shadow: none;
+}
+.navbar-light .navbar-nav .active > .nav-link{
+    color: unset;
+}
+.nav-item.active, .nav-item:hover{
+    color: #008752 !important;
+    border-bottom: 4px solid #008752;
+}
+.nav-item.active a.router-link-exact-active{
+    color: #008752;
 }
 select{
     -webkit-appearance: none;
@@ -47,6 +62,18 @@ select{
     background-position: center;
     color: #fff;
 }
+#home .top{
+    height: 76vh;
+    width: 55%;
+    display: flex;
+    flex-flow: column;
+    align-content: center;
+    justify-content: center;
+}
+#home .bottom{
+    height: 8vh;
+    border-left: 5px solid #008752;
+}
 #signup, #getapp{
     background: #232526;
 }
@@ -58,9 +85,13 @@ select{
     border-bottom: solid 1px #ebebf2;
 }
 #getapp .google{
-    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.26), rgba(67, 67, 67, 0.16)), url('../../../public/img/home.png');
+    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.26), rgba(67, 67, 67, 0.16)), url('../../../public/img/worldmap.png');
     /* background-size: contain; */
     height: 300px;
+}
+.blackBox{
+    height: 250px;
+    background: #222;
 }
 
 /* font-sizes */
@@ -79,8 +110,18 @@ select{
     font-family: source sans pro;
     font-size: 15px;
 }
+.y-15{
+    color: #fbd701;
+    font-family: source sans pro;
+    font-size: 15px;
+}
 .p-17{
     color: #008752;
+    font-family: source sans pro;
+    font-size: 17px;
+}
+.w-17{
+    color: #fff;
     font-family: source sans pro;
     font-size: 17px;
 }
@@ -99,18 +140,34 @@ select{
     font-family: source sans pro;
     font-size: 20px;
 }
-.w-36{
+.g-24{
+    color: #008752;
+    font-family: source sans pro;
+    font-size: 24px;
+}
+.w-48{
     color: #fff;
     font-family: source sans pro;
-    font-size: 36px;
+    font-size: 48px;
+    font-weight: 600;
 }
 
 /* input forms */
 .grey.form-control{
     border-radius: 0;
     height: 42px;
+    
 }
 .grey.form-control:focus{
+    box-shadow: none;
+    border: 1px solid #008752;
+}
+.gr.form-control{
+    border-radius: 0;
+    height: 42px;
+    border: none;
+}
+.gr.form-control:focus{
     box-shadow: none;
     border: 1px solid #008752;
 }
@@ -142,12 +199,21 @@ input.date:focus{
 }
 [type="date"] {
     background:#fff  ;
+    font-size: 12px;
 }
 [type="date"]::-webkit-inner-spin-button {
     display: none;
 }
 [type="date"]::-webkit-calendar-picker-indicator {
-    opacity: 0;
+    opacity: 1;
+}
+.currency.form-control {
+    border: none;
+    border-radius: 0;
+}
+select.currency.form-control:focus{
+    border: 1px solid #008752;
+    box-shadow: none;
 }
   
 
@@ -158,7 +224,8 @@ input.date:focus{
     color: #fff;
     font-family: Source sans pro;
     font-size: 15px;
-    height: 42px;
+    font-weight: 600;
+    height: 48px;
     border-radius: 0;
     transition: .3s ease-in-out;
 }
@@ -237,6 +304,9 @@ input.date:focus{
     .p-15{
         font-size: 12px;
     }
+    #home .top{
+        width: 100%;
+    }
     #getapp{
         /* height: 600px !important; */
     }
@@ -245,13 +315,14 @@ input.date:focus{
         font-family: source sans pro;
         font-size: 14px;
     }
-    .w-36{
+    .w-48{
         color: #fff;
         font-family: source sans pro;
         font-size: 24px;
     }
 }
 
+select#gender option[value="GBP"]   { background-image:url(../../../public/img/gpb.svg);   }
 
 .sitemessage {
     width:100%;
@@ -295,3 +366,72 @@ input.date:focus{
     }
 }
 
+/* .marquee {
+    background-color: #ddd;
+    width: 500px;
+    margin: 0 auto;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+  .marquee span {
+    display: inline-block;
+    font-size: 20px;
+    position: relative;
+    left: 100%;
+    animation: marquee 25s linear infinite;
+  }
+  .marquee:hover span {
+    animation-play-state: paused;
+  }
+  
+  .marquee span:nth-child(1) {
+    animation-delay: 0s !important;
+  }
+  .marquee span:nth-child(2) {
+    animation-delay: 2s !important;
+  }
+  .marquee span:nth-child(3) {
+    animation-delay: 4s !important;
+  }
+  .marquee span:nth-child(4) {
+    animation-delay: 6s !important;
+  }
+  .marquee span:nth-child(5) {
+    animation-delay: 8s !important;
+  }
+  .marquee span:nth-child(6) {
+    animation-delay: 10s !important;
+  }
+  .marquee span:nth-child(7) {
+    animation-delay: 12s !important;
+  }
+  .marquee span:nth-child(8) {
+    animation-delay: 14s !important;
+  } */
+  
+  /* .marquee span:nth-child(8) {
+    animation-delay: 14s;
+  }
+  .marquee span:nth-child(9) {
+    animation-delay: 16s;
+  }
+  .marquee span:nth-child(10) {
+    animation-delay: 18s;
+  }
+  .marquee span:nth-child(11) {
+    animation-delay: 20s;
+  }
+  .marquee span:nth-child(12) {
+    animation-delay: 22s;
+  }
+  .marquee span:nth-child(13) {
+    animation-delay: 24s;
+  }
+  .marquee span:nth-child(14) {
+    animation-delay: 26s;
+  } */
+  
+  /* @keyframes marquee {
+    0%   { left: 100%; }
+    100% { left: -100%; }
+  } */
