--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -59,17 +59,29 @@ select{
     background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.26), rgba(67, 67, 67, 0.16)), url('../../../public/img/home.png');
     background-size: cover;
     min-height: 90vh;
+    margin-top: 60px;
+    /* max-height: 700px !important; */
+    /* height: auto; */
     background-position: center;
     color: #fff;
+    display: flex;
+    flex-flow: column;
+    align-content: center;
+    justify-content: center;
+    /* padding-top: 150px !important; */
+    
 }
-#home .top{
-    height: 76vh;
+canvas+.particles-js-canvas-el{
+    height: unset !important;
+}
+/* #home .top{
+    height: 100%;
     width: 100%;
     display: flex;
     flex-flow: column;
     align-content: center;
     justify-content: center;
-}
+} */
 #home .bottom{
     height: 8vh;
     border-left: 5px solid #008752;
@@ -280,6 +292,7 @@ select.currency.form-control:focus{
     border-bottom: 1px solid #fa4f4f;
 }
 .table tbody tr{
+    margin-top: +20px !important;
     box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
 }
 .table thead th, .table tbody td{
