--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -160,6 +160,81 @@ padding-left: 0;
   border-bottom: 5px solid #008752;
   color: #008752;
 }
+#sign-in{
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(49, 56, 76, 0.65))), url('../../../public/img/rectangle@3x.jpg');
+  background-size: cover;
+  background-position: top center;
+  height: 100vh;
+}
+#sign-in-1{
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(49, 56, 76, 0.65))), url('../../../public/img/greg-becker-UXRceJ89NNw-unsplash.jpg');
+  background-size: cover;
+  background-position: top center;
+  height: 100vh;
+}
+.sign-in-container{
+  display: flex;
+  flex-flow: column;
+  /* align-items: center; */
+  justify-content: center;
+  height: 100vh;
+}
+.input-group.login{
+  height: 48px;
+  border: 1px solid rgba(216, 216, 216, 0.5);
+  background-color: rgba(216, 216, 216, 0.1);
+}
+.input-group.login input.form-control{
+  background: transparent;
+  border: none;
+  height: 47px; 
+}
+.input-group.login input.form-control:focus > .input-group.login{
+  border: solid 1px rgba(0, 135, 82, 0.2);
+  background-color: rgba(0, 135, 82, 0.05);
+ 
+}
+.input-group.login i{
+  color: rgba(49, 56, 76, 0.4);
+  font-size: 20px;
+}
+.input-group.operator{
+  border: solid 1px #f0f0f0;
+  background-color: #ffffff;
+  height: 40px;
+}
+.input-group.operator input{
+  border: none;
+  background: transparent;
+  height: 39px;
+}
+.input-group.operator input.form-control:focus{
+  box-shadow: none;
+  border: none;
+}
+.input-group.operator i{
+  color: #31384c;
+  font-size: 20px;
+}
+a.g-15{
+  font-family: Source Sans Pro;
+  font-size: 15px;
+  color: #008752;
+  text-decoration: none;
+}
+.carousel-indicators li{
+  background: transparent;
+  border: 4px solid #fff;
+  color: #fff;
+  height: 1px;
+  width: 1px;
+  border-radius: 100%;
+  z-index: 99999; 
+}
+.carousel-indicators li.active{
+  background: transparent;
+  border: 4px solid #008752  !important;
+}
 @media (max-width: 1024px){
   #home{
     max-height: 700px !important;
