--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -77,7 +77,7 @@ text-decoration: none;
 
 /* sections */
 #home{
-    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.26), rgba(67, 67, 67, 0.16)), url('../../../public/img/home.png');
+    /* background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.26), rgba(67, 67, 67, 0.16)), url('../../../public/img/home.png'); */
     background-size: cover;
     min-height: 90vh;
     margin-top: 60px;
